--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "uuid": "^9.0.0",
     "vue": "^3.2.33"
   },
   "devDependencies": {
